# IsaacSyntheticPerception

./: .gitignore  .gitmodules  :w:q:qZZZZZ  :w:w  README.md  _isaac_sim  orbit.sh
com/SyntheticPerception/: __init__.py
com/SyntheticPerception/app/: CMakeLists.txt  __init__.py  configs.yaml  extensionname_task.py  height_mapper.py  mesh_module.cpp  ros_dreamer.py  sensors.py  setup.py  standalone.py  standalone2.py  syntehtic_data_watch.py  synthetic_perception.py  synthetic_perception_extension.py  view_images.py  vis_results.py
com/SyntheticPerception/app/Archive/: extensionname_task.py  math_utils.py  syntehtic_data_watch.py
com/SyntheticPerception/app/PCG/: AreaMaskGenerator.py  DataUtils.py  MeshGenerator.py  PerlinNoise.py  PoissonDisk.py  RenderOption_2023-07-03-12-59-43.json  WorldGenerator.py  __init__.py  world.py  worldUtils.py
com/SyntheticPerception/app/Sensors/: Camera.py  IMU.py  LIDAR.py  __init__.py
com/SyntheticPerception/app/Utils/: AssetConverterInsancing.py  BetterObject.py  DataFormatter.py  Rigidbody.py  segmentation_utils.py  view_images.py  vis_results.py
com/SyntheticPerception/app/Utils/EnvDataTool/: EnvCreator.py  main.py  test.py
com/SyntheticPerception/app/__build/: CMakeCache.txt
com/SyntheticPerception/app/core/: __init__.py  environment.py  isaac_handler.py  objects.py  physxutils.py  rig.py
com/extensionname/app/: __init__.py  extensionname.py  extensionname_extension.py  segmentation_utils.py
config/: extension.toml
docs/source/: conf.py  index.rst
